<resources>
    <string name="app_name">Aula6App</string>
    <string name="btnPiscar">Piscar</string>
    <string name="btnCheck">Check</string>
    <string name="chkOpcao1">Opção 1</string>
    <string name="chkOpcao2">Opção 2</string>
    <string name="txtAzul">Azul</string>
    <string name="txtAmarelo">Amarelo</string>
    <string name="txtVerde">Verde</string>
    <string name="txtBranco">Branco</string>
    <string-array name="forma_pagamento">
        <item>Cartão</item>
        <item>Cheque</item>
        <item>Dinheiro</item>
    </string-array>
    <string name="btnCorSelecionada">Cor Selecionada</string>
    <string name="btnAdicionarCor">Adicionar Cor</string>
    <string name="txtFormaPagamento">Forma de Pagamento:</string>
    <string name="btnFormaPagamento">Forma de Pagamento</string>
    <string name="btnExibirPreco">Exibir Preco</string>
</resources>
