<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.aula6app.RadioButtonActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="350sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/rgCoresID">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAzul"
            android:id="@+id/rdAzulID"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAmarelo"
            android:id="@+id/rdAmareloID"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtVerde"
            android:id="@+id/rdVerdeID"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCorSelecionada"
        android:id="@+id/btnCorSelecionadaID"
        android:layout_below="@+id/rgCoresID"
        android:layout_centerHorizontal="true"
        android:onClick="qualCor"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdicionarCor"
        android:id="@+id/btnAdicionarCorID"
        android:layout_below="@+id/btnCorSelecionadaID"
        android:layout_centerHorizontal="true"
        android:onClick="addCor"/>
</RelativeLayout>
